<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_sign_in">

    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.example.mvpchatapplication.ui.chats.ChatsFragment"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_chats">
        <action
            android:id="@+id/action_navigation_chats_to_navigation_message"
            app:destination="@id/navigation_message" />
        <action
            android:id="@+id/action_navigation_chats_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>
    <fragment
        android:id="@+id/navigation_message"
        android:name="com.example.mvpchatapplication.ui.chatstest.MessageTestFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_message">
        <action
            android:id="@+id/action_navigation_chat_to_navigation_capture_media"
            app:destination="@id/navigation_capture_media" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.mvpchatapplication.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_navigation_chats"
            app:destination="@id/navigation_chats"
            app:popUpTo="@id/navigation_profile"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_profile_to_navigation_sign_in"
            app:destination="@id/navigation_sign_in"
            app:popUpTo="@id/navigation_chats"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_sign_up"
        android:name="com.example.mvpchatapplication.ui.signup.SignUpFragment"
        android:label="@string/title__sign_up"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_navigation_sign_up_to_navigation_profile"
            app:destination="@id/navigation_profile"
            app:popUpTo="@id/navigation_sign_in"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_sign_in"
        android:name="com.example.mvpchatapplication.ui.signin.SignInFragment"
        android:label="@string/title_sign_in"
        tools:layout="@layout/fragment_sign_in">

        <action
            android:id="@+id/action_navigation_sign_in_to_navigation_sign_up"
            app:destination="@id/navigation_sign_up" />
        <action
            android:id="@+id/action_navigation_sign_in_to_navigation_chats"
            app:destination="@id/navigation_chats"/>
        <action
            android:id="@+id/action_navigation_sign_in_to_navigation_password_reset"
            app:destination="@id/navigation_password_reset" />
    </fragment>
    <fragment
        android:id="@+id/navigation_password_reset"
        android:name="com.example.mvpchatapplication.ui.passwordreset.PasswordResetFragment"
        tools:layout="@layout/fragment_password_reset" />
    <fragment
        android:id="@+id/navigation_capture_media"
        android:name="com.example.mvpchatapplication.ui.message.CaptureMediaFragment"
        android:label="@string/title_capture_media"
        tools:layout="@layout/fragment_send_media">
        <action
            android:id="@+id/action_navigation_capture_media_to_navigation_send_media"
            app:destination="@id/navigation_send_media" />
    </fragment>
    <fragment
        android:id="@+id/navigation_send_media"
        android:name="com.example.mvpchatapplication.ui.message.SendMediaFragment"
        android:label="@string/title_send_media"
        tools:layout="@layout/fragment_send_media" />
</navigation>