<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="My Profile" />
            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Log out"
                android:textStyle="bold"
                android:background="?selectableItemBackground"
                android:padding="8dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="16dp"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        android:layout_marginTop="?actionBarSize"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profileImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                android:src="@drawable/baseline_account_circle_24" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/uploadProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                app:indicatorSize="36dp"
                app:trackColor="@color/white"
                app:indicatorColor="@android:color/holo_blue_dark"
                android:max="100"
                android:progress="25"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/profileImage"
                app:layout_constraintEnd_toEndOf="@id/profileImage"
                app:layout_constraintTop_toTopOf="@id/profileImage"
                app:layout_constraintBottom_toBottomOf="@id/profileImage"/>

            <ImageView
                android:id="@+id/editPhoto"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="-8dp"
                android:background="@color/black_500"
                android:padding="6dp"
                android:src="@drawable/baseline_edit_24"
                app:layout_constraintEnd_toEndOf="@+id/profileImage"
                app:layout_constraintTop_toTopOf="@id/profileImage"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Name"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileImage" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_edit_text"
                android:ems="10"
                android:hint="@string/name_hint"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLength="25"
                android:paddingHorizontal="15dp"
                android:paddingVertical="12dp"
                android:textColorHint="@color/gray_hint"
                app:layout_constraintTop_toBottomOf="@id/nameText" />

            <TextView
                android:id="@+id/phoneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Phone"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextName" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_edit_text"
                android:ems="10"
                android:hint="@string/phone_hint"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="25"
                android:paddingHorizontal="15dp"
                android:paddingVertical="12dp"
                android:textColorHint="@color/gray_hint"
                app:layout_constraintTop_toBottomOf="@id/phoneText" />


            <TextView
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Email"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextPhone" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_edit_text"
                android:ems="10"
                android:hint="@string/email_hint"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLength="25"
                android:paddingHorizontal="15dp"
                android:paddingVertical="12dp"
                android:textColorHint="@color/gray_hint"
                app:layout_constraintTop_toBottomOf="@id/emailText" />

            <TextView
                android:id="@+id/passwordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Password"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextEmail" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                app:boxStrokeWidthFocused="0dp"
                app:boxStrokeWidth="0dp"
                app:boxCornerRadiusBottomEnd="0dp"
                app:boxCornerRadiusTopEnd="0dp"
                app:boxCornerRadiusBottomStart="0dp"
                app:boxCornerRadiusTopStart="0dp"
                app:layout_constraintTop_toBottomOf="@id/passwordText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_edit_text"
                    android:drawablePadding="10dp"
                    android:hint="@string/password_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:maxLength="25"
                    android:paddingVertical="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="36dp"
                    android:textColorHint="@color/gray_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/birthdayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Birthday"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextPasswordLayout" />

            <EditText
                android:id="@+id/editTextBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/birthday_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingVertical="12dp"
                android:paddingStart="12dp"
                android:textColorHint="@color/gray_hint"
                app:layout_constraintTop_toBottomOf="@id/birthdayText" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingVertical="15dp"
                android:text="@string/profile_save_btn_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextBirthday" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        android:elevation="4dp"
        android:layout_gravity="center"
        app:indicatorColor="@android:color/holo_blue_dark"
        tools:visibility="visible" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>