<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:visibility="visible"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp">

    <TextView
        android:id="@+id/titleText"
        style="@style/VeryBoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome back"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText"/>

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subTitleText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:boxStrokeWidthFocused="0dp"
        app:boxStrokeWidth="0dp"
        app:boxCornerRadiusBottomEnd="0dp"
        app:boxCornerRadiusTopEnd="0dp"
        app:boxCornerRadiusBottomStart="0dp"
        app:boxCornerRadiusTopStart="0dp"
        app:layout_constraintTop_toBottomOf="@id/emailText">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/outline_email_24"
        android:drawablePadding="10dp"
        android:hint="@string/email_hint"
        android:textColorHint="@color/gray_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:maxLength="25"
        android:padding="12dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/emailText" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Password"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEmailLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false"
        app:boxStrokeWidthFocused="0dp"
        app:boxStrokeWidth="0dp"
        app:boxCornerRadiusBottomEnd="0dp"
        app:boxCornerRadiusTopEnd="0dp"
        app:boxCornerRadiusBottomStart="0dp"
        app:boxCornerRadiusTopStart="0dp"
        app:layout_constraintTop_toBottomOf="@id/passwordText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_edit_text"
            android:drawableStart="@drawable/outline_lock_24"
            android:drawablePadding="10dp"
            android:hint="@string/password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLength="25"
            android:paddingVertical="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="36dp"
            android:textColorHint="@color/gray_hint" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/editTextPasswordLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="Forgot Password?"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingVertical="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword" />

    <LinearLayout
        android:id="@+id/signUpLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account"/>

        <Button
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sing Up"
            android:textAllCaps="false"
            android:textStyle="bold"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
    </LinearLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:indicatorColor="@android:color/holo_blue_dark"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/errorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        android:elevation="10dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/baseline_network_check_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="Network Error. Please check internet connection!"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/signInScreenGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="signUpLayout,editTextEmailLayout,editTextPasswordLayout,passwordText,emailText,forgotPassword,signIn,titleText,subTitleText"/>

</androidx.constraintlayout.widget.ConstraintLayout>